# backend/app/Http/Controllers/Api/PembayaranIuranController.php
@@ -119,6 +119,7 @@ class PembayaranIuranController extends Controller
      *             @OA\Property(property="id_penghuni", type="integer"),
      *             @OA\Property(property="bulan", type="string", example="Juli"),
      *             @OA\Property(property="tahun", type="integer", example=2025),
+     *             @OA\Property(property="jenis_iuran", type="string", example="Satpam"),
      *             @OA\Property(property="tagihan", type="number", format="float", example=50000.00),
      *             @OA\Property(property="status_pembayaran", type="string", enum={"belum bayar", "lunas"}),
      *             @OA\Property(property="metode_pembayaran", type="string", nullable=true),
@@ -136,6 +137,7 @@ class PembayaranIuranController extends Controller
             'id_penghuni' => 'required|exists:penghuni,id',
             'bulan' => 'required|string',
             'tahun' => 'required|digits:4|integer',
+            'jenis_iuran' => 'required|string',
             'tagihan' => 'required|numeric',
             'status_pembayaran' => 'required|in:belum bayar,lunas',
             'metode_pembayaran' => 'nullable|string',
@@ -147,6 +149,7 @@ class PembayaranIuranController extends Controller
             'id_penghuni' => $request->id_penghuni,
             'bulan' => $request->bulan,
             'tahun' => $request->tahun,
+            'jenis_iuran' => $request->jenis_iuran,
             'tagihan' => $request->tagihan,
             'status_pembayaran' => $request->status_pembayaran,
             'metode_pembayaran' => $request->metode_pembayaran,
@@ -180,6 +183,7 @@ class PembayaranIuranController extends Controller
      *             @OA\Property(property="id_penghuni", type="integer"),
      *             @OA\Property(property="bulan", type="string", example="Juli"),
      *             @OA\Property(property="tahun", type="integer", example=2025),
+     *             @OA\Property(property="jenis_iuran", type="string", example="Satpam"),
      *             @OA\Property(property="tagihan", type="number", format="float", example=75000.00),
      *             @OA\Property(property="status_pembayaran", type="string", enum={"belum bayar", "lunas"}),
      *             @OA\Property(property="metode_pembayaran", type="string", nullable=true),
@@ -198,6 +202,7 @@ class PembayaranIuranController extends Controller
             'id_penghuni' => 'required|exists:penghuni,id',
             'bulan' => 'required|string',
             'tahun' => 'required|digits:4|integer',
+            'jenis_iuran' => 'required|string',
             'tagihan' => 'required|numeric',
             'status_pembayaran' => 'required|in:belum bayar,lunas',
             'metode_pembayaran' => 'nullable|string',
@@ -220,6 +225,7 @@ class PembayaranIuranController extends Controller
                 'id_penghuni' => $request->id_penghuni,
                 'bulan' => $request->bulan,
                 'tahun' => $request->tahun,
+                'jenis_iuran' => $request->jenis_iuran,
                 'tagihan' => $request->tagihan,
                 'status_pembayaran' => $request->status_pembayaran,
                 'metode_pembayaran' => $request->metode_pembayaran,
